--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
         "pages/login/login_page_weapp_ass",
         "pages/login/login_page_weapp_ass",
         "pages/components/info_tip/info_tip",
-        "pages/components/info_tip/info_tip"
+        "pages/components/info_tip/info_tip",
+        "pages/login/login_page_weapp_password"
     ],
     "window": {
         "backgroundTextStyle": "light",
